# usb-pd-analyzer

./: .clang-format  CMakeLists.txt  README.md
src/: USBPDAnalyzer.cpp  USBPDAnalyzer.h  USBPDAnalyzerResults.cpp  USBPDAnalyzerResults.h  USBPDAnalyzerSettings.cpp  USBPDAnalyzerSettings.h  USBPDMessages.cpp  USBPDMessages.h  USBPDSimulationDataGenerator.cpp  USBPDSimulationDataGenerator.h  USBPDTypes.h  crc32.cpp  crc32.h
